# ScientificCalculator

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  deploy.yml
include/: calculator.h
src/: calculator.cpp  main.cpp
tests/: test_calculator.cpp
